# WakaTimeREADME

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.config/: nextest.toml
.github/workflows/: build.yml
config/: config.toml
doc/: book.toml
src/: main.rs
src/adapter/: git_adapter.rs  mod.rs  wakatime_adapter.rs
src/application/: config.rs
src/domain/: content_manager.rs  mod.rs
src/domain/entity/: mod.rs  waka_time_metrics_entity.rs
src/infrastructure/: http_client.rs  mod.rs
src/infrastructure/middleware/: logging_middleware.rs  mod.rs
src/infrastructure/telemetry/: logger.rs  mod.rs
src/port/: data_source_port.rs  mod.rs  upload_content_port.rs
