[package]
name = "wakatime-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.75"
chrono = "0.4.31"
color-eyre = "0.6.2"
duration-str = "0.7.1"
dotenv = "0.15.0"
log = "0.4.20"
reqwest = "0.11.23"
reqwest-middleware = "0.2.4"
reqwest-retry = "0.3.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
task-local-extensions = "0.1.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8.8"
url = "2.5.0"
tempfile = "3.9.0"

###
# Optional
###

[dependencies.git2]
version = "0.18.1"
optional = true

[dependencies.opentelemetry]
version = "0.21.0"
features = ["logs"]
optional = true

[dependencies.opentelemetry-appender-log]
version = "0.2.0"
default-features = false
optional = true

[dependencies.opentelemetry-semantic-conventions]
version = "0.13.0"
optional = true

[dependencies.opentelemetry-stdout]
version = "0.2.0"
features = ["logs"]
optional = true

[dependencies.opentelemetry_sdk]
version = "0.21.1"
features = ["logs"]
optional = true

[features]
default = ["git"]
git = ["git2"]
telegram = []
telemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry-appender-log",
    "dep:opentelemetry-semantic-conventions",
    "dep:opentelemetry-stdout",
    "dep:opentelemetry_sdk",
]
